--- a/.env
+++ b/.env
@@ -12,6 +12,9 @@
 #           users on this computer. 
 ######################################################################
 
+port=80
+COMPOSE_HTTP_TIMEOUT=120
+
 # Computer name (for display in app dashboard)
 DEVICE_NAME=<name>
 
