--- a/.env
+++ b/.env
@@ -16,37 +16,45 @@ port=80
 COMPOSE_HTTP_TIMEOUT=120
 
 # Computer name (for display in app dashboard)
-DEVICE_NAME=<name>
+
+DEVICE_NAME=vmc-alp-01
 
 # Your Earnapp device id : ! must start with sdk-node-<md5sum>
 # <md5sum> can be done this way : echo "your random string" | md5sum  (get the 32 char result)
 # A few time after starting it successfully : register your node on earnapp dashboard : https://earnapp.com/r/<your device id>
-EARNAPP_DEVICE_ID=sdk-node-<md5sum>
+# EARNAPP_DEVICE_ID=sdk-node-<md5sum>
 
 # Your Honeygain account email
 # Your Honeygain account password
-HONEYGAIN_EMAIL=<email>
-HONEYGAIN_PASSWD=<password>
+
+HONEYGAIN_EMAIL=jeremiasmacedo9@gmail.com
+HONEYGAIN_PASSWD=zhtail9!
 
 # Your IproyalPawns account email
 # Your IproyalPawns account password
-IPROYALPAWNS_EMAIL=<email>
-IPROYALPAWNS_PASSWD=<password>
+
+IPROYALPAWNS_EMAIL=jeremiasmacedo9@gmail.com
+IPROYALPAWNS_PASSWD=zhtail9!
 
 # Your Peer2profit account email
-PEER2PROFIT_EMAIL=<email>
+
+PEER2PROFIT_EMAIL=jeremiasmacedo9@gmail.com
 
 # Your packetstream CID (to retrieve in your packetstream dashboard : Section : download -> Looking for linux app -> docker command : -e CID=xxxx)
-PACKETSTREAM_CID=<CID>
+
+PACKETSTREAM_CID=4gfz
 
 # Your traffmonetizer token (to retrieve in your traffmonetizer dashboard : Section : dashboard -> Your application token
-TRAFFMONETIZER_TOKEN=<TOKEN>
+
+TRAFFMONETIZER_TOKEN=n8izhx5l8dpTxCMr9GVmfLR2NUaCm12DeYK5gKTgx+I=
 
 # Your Repocket account email
 # Your Repocket account password
-RP_EMAIL='<email>'
-RP_PASSWORD='<password>'
+
+RP_EMAIL='jeremiasmacedo9@gmail.com'
+RP_PASSWORD='zhtail9!'
 
 # Internal environment (do not change)
+
 _COMPOSE_PROJECT_NAME=cashfactory
 _COMPOSE_PROJECT_STACK_ID=1
