--- a/.env
+++ b/.env
@@ -17,42 +17,43 @@ COMPOSE_HTTP_TIMEOUT=120
 
 # Computer name (for display in app dashboard)
 
-DEVICE_NAME=vmc-alp-01
+DEVICE_NAME=vmc-1-4g
 
 # Your Earnapp device id : ! must start with sdk-node-<md5sum>
 # <md5sum> can be done this way : echo "your random string" | md5sum  (get the 32 char result)
 # A few time after starting it successfully : register your node on earnapp dashboard : https://earnapp.com/r/<your device id>
-# EARNAPP_DEVICE_ID=sdk-node-<md5sum>
+
+#EARNAPP_DEVICE_ID=sdk-node-<md5sum>
 
 # Your Honeygain account email
 # Your Honeygain account password
 
-HONEYGAIN_EMAIL=jeremiasmacedo9@gmail.com
-HONEYGAIN_PASSWD=zhtail9!
+HONEYGAIN_EMAIL=rop2p.devices@gmail.com
+HONEYGAIN_PASSWD=Senhadevices$999
 
 # Your IproyalPawns account email
 # Your IproyalPawns account password
 
-IPROYALPAWNS_EMAIL=jeremiasmacedo9@gmail.com
-IPROYALPAWNS_PASSWD=zhtail9!
+IPROYALPAWNS_EMAIL=rop2p.devices@gmail.com
+IPROYALPAWNS_PASSWD=Senhadevices$999
 
 # Your Peer2profit account email
 
-PEER2PROFIT_EMAIL=jeremiasmacedo9@gmail.com
+PEER2PROFIT_EMAIL=rop2p.devices@gmail.com
 
 # Your packetstream CID (to retrieve in your packetstream dashboard : Section : download -> Looking for linux app -> docker command : -e CID=xxxx)
 
-PACKETSTREAM_CID=4gfz
+PACKETSTREAM_CID=57Cx
 
 # Your traffmonetizer token (to retrieve in your traffmonetizer dashboard : Section : dashboard -> Your application token
 
-TRAFFMONETIZER_TOKEN=n8izhx5l8dpTxCMr9GVmfLR2NUaCm12DeYK5gKTgx+I=
+TRAFFMONETIZER_TOKEN=MWbo8aIYnEHuLoUk5eJ01tvLKPgCJc00S+Wnxoxp+lE=
 
 # Your Repocket account email
 # Your Repocket account password
 
-RP_EMAIL='jeremiasmacedo9@gmail.com'
-RP_PASSWORD='zhtail9!'
+RP_EMAIL='rop2p.devices@gmail.com'
+RP_PASSWORD='Senhadevices$999'
 
 # Internal environment (do not change)
 
